--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
   "require": {
     "php": ">=7.1",
     "silex/silex": "~2.0",
-    "guzzlehttp/guzzle": "6.2.2"
+    "guzzlehttp/guzzle": "6.2.2",
+    "symfony/yaml": "^4.0"
   },
   "require-dev": {
     "phpunit/phpunit": "~5.7"
