--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     "symfony/yaml": "^4.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "~5.7"
+    "phpunit/phpunit": "~5.7",
+    "symfony/var-dumper": "^4.0"
   }
 }
