--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     "php": ">=7.1",
     "silex/silex": "~2.0",
     "guzzlehttp/guzzle": "6.2.2",
-    "symfony/yaml": "^4.0"
+    "symfony/yaml": "^4.0",
+    "knplabs/console-service-provider": "^2.2"
   },
   "require-dev": {
     "phpunit/phpunit": "~5.7",
