--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,12 @@
   },
   "require-dev": {
     "phpunit/phpunit": "~5.7",
-    "symfony/var-dumper": "^4.0"
+    "symfony/var-dumper": "^4.0",
+    "squizlabs/php_codesniffer": "^3.2"
+  },
+  "scripts": {
+    "psr2": [
+      "vendor/squizlabs/php_codesniffer/bin/phpcs --standard=PSR2 --extensions=php,inc,lib src/"
+    ]
   }
 }
